<resources>
    <string name="app_name">ElderCare</string>
    <string name="login">Logga in</string>
    <string name="register">Skapa konto</string>
    <string name="email">Epostadress</string>
    <string name="password">Lösenord</string>
    <string name="click_to_login">Tryck här för att logga in</string>
    <string name="click_to_register">Skapa nytt konto</string>
    <string name="logout">Logga ut</string>
    <string name="lastName">Efternamn</string>
    <string name="phoneNumber">Telefonnummer</string>
    <string name="firstName">Förnamn</string>
    <string name="password2">Bekräfta lösenord</string>
    <string name="idNumber">Personnummer (12 siffror)</string>
    <string name="forgotPassword">Glömt lösenord</string>
    <string name="invalid_user_login">Fel användarnamn, lösenord eller pinkod</string>
    <string name="something_went_wrong">Något med databasen gick fel. Kontakta ansvarig eller försök igen.</string>
    <string name="write_recipient_name">Skriv vårdtagarens epost här</string>
    <string name="Ja">Ja</string>
    <string name="Nej">Nej</string>
    <string name="sureLogOut">Är du säker på att du vill logga ut?</string>
    <string name="choose">Du måste välja vårdtagare eller vårdgivare!</string>
    <string name="mismatch_password">Lösenorden matchar inte!</string>
    <string name="mismatch_pin_code">Pinkoder matchar inte</string>
    <string name="str_provide_email_to_restore_password">Ange din epostadress för att återställa ditt lösenord</string>
    <string name="provide_email">Ange epostadress</string>
    <string name="provide_password">Ange lösenord</string>
    <string name="provide_pin">Ange pinkod</string>
    <string name="unsafe_password">Lösenordet måste vara minst 6 siffror</string>
    <string name="provide_first_name">Ange förnamn</string>
    <string name="provide_last_name">Ange efternamn</string>
    <string name="provide_phone_number">Ange telefonnummer</string>
    <string name="provide_personal_number">Ange personnummret</string>
    <string name="restoration_success">Kolla din email för att få ett nytt lösenord</string>
    <string name="restoration_failed">Återställning misslyckades</string>
    <string name="auth_failed">Autentisering misslyckades</string>
    <string name="invalid_pin">Fel pinkod, försök igen!</string>
    

    <string name="careTaker">Vårdtagare</string>
    <string name="careGiver">Vårdgivare</string>

    <!--STRINGS FOR CREATE PATIENT-->
    <string name="address">Adress</string>
    <string name="city">Ort</string>
    <string name="county">Län</string>
    <string name="preferences">Preferenser</string>
    <string name="restrictions">Allergier</string>
    <string name="PIN">PIN Kod</string>
    <string name="confirmPIN">Bekräfta PIN Kod</string>
    <string name="createPatient">Skapa patient</string>

    <!--ERROR MESSAGES, CREATE PATIENT-->
    <string name="createPatientSuccess">Patient tillagd! (TODO)</string>
    <string name="createPatientErrorDefault">Ange inmatningsfel</string>
    <string name="createPatientErrorForename">Ange förnamn</string>
    <string name="createPatientErrorSurname">Ange efternamn</string>
    <string name="createPatientErrorPhone">Ange telefonnummer (10 siffror)</string>
    <string name="createPatientErrorAddress">Ange adress</string>
    <string name="createPatientErrorCity">Ange ort</string>
    <string name="createPatientErrorCounty">Ange län</string>
    <string name="createPatientErrorPreferences">Inga preferenser</string>
    <string name="createPatientErrorRestrictions">Inga allergier</string>
    <string name="createPatientErrorPIN">Ange PIN Kod (4 siffror)</string>
    <string name="createPatientErrorConfirmPIN">Bekräfta PIN kod</string>

    <string name="title_activity_drop_down">dropDown</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <!-- WILLES -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Inställningar</string>
    <string name="home">Hem</string>
    <string name="patients">Vårdtagare</string>
    <string name="profile">Profil</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_closed">Drawer Closed</string>
    <string name="notifications">Notiser</string>
    <string name="notis">Notis</string>
    <string name="logout_home">Logga Ut</string>
    <string name="name">Namn</string>
    <string name="time">Tid</string>
    <string name="default_channel_id">1337</string>
    <string name="default_channel_name">caregiver_channel</string>
    <string name="languageText">Välj språk</string>
    <string name="swedish">Svenska</string>
    <string name="english">Engelska</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="notifications_are_disabled">Notifikationer är avstängda. Du kommer missa uppdateringar.</string>
    <string name="notif_not_eaten_title">Har inte ätit</string>
    <string name="notif_not_eaten_msg">%s har inte ätit %s %s</string>
    <string name="notif_alarm_title">NÖDLARM</string>
    <string name="notif_alarm_msg">%s larmar!</string>


    <string name="historylog">Historik</string>


    <!-- Meal management -->
    <string name="manage_meals">Hantera måltider</string>
    <string name="str_template_meals">Grundmåltider</string>
    <string name="meal_time_bad_format">Inkorrekt format på tid för måltid</string>
    <string name="meal_time_missing_colon">Tid för måltid saknar kolon</string>
    <string name="recipient_meals_edit">Ändra</string>
    <string name="btn_replace_template_meal">Ersätt med grundmåltider</string>
    <string name="str_add_recipient">Lägg till vårdtagare</string>
    <string name="str_remove_recipient">Ta bort vårdtagare</string>
    <string name="str_add_meal">Lägg till måltid</string>
    <string name="str_recipients">Vårdtagare</string>
    <string name="str_recipient">Vårdtagare</string>
    <string name="str_back">Tillbaka</string>
    <!--    <string name="str_back">&lt</string> &lt;!&ndash; &lt is converted to the character '<' &ndash;&gt;-->
    <string name="default_meal_name">Namnlös</string>
    <string name="str_caregiverUID_was_null">UID för vårdgivare är null</string>
    <string name="str_recipientUID_was_null">UID för vårdtagare är null</string>
    <string name="str_delete">Ta bort</string>
    <string name="str_recipient_info">Info</string>
    <string name="str_no_meals">Inga måltider</string>
    <string name="str_no_recipients">Inga vårdtagare</string>
    <string name="str_no_description">Ingen beskrivning</string>
    <string name="str_monday">Måndag</string>
    <string name="str_tuesday">Tisdag</string>
    <string name="str_wednesday">Onsdag</string>
    <string name="str_thursday">Torsdag</string>
    <string name="str_friday">Fredag</string>
    <string name="str_saturday">Lördag</string>
    <string name="str_sunday">Söndag</string>
    <string name="str_BackToMealPlan">Tillbaka till måltidsplan</string>
    <string name="str_missing_name">Namn saknas?</string>
    <string name="str_invalid_email">Epost har fel format (exempel@mail.com)</string>
    <string name="fmt_added_recipient">%s har lagts till i din vårdtagarlista</string>
    <string name="fmt_exists_recipient">%s finns redan i din vårdtagarlista</string>
    <string name="fmt_removed_recipient">%s har tagits bort från din vårdtagarlista</string>
    <string name="fmt_not_exist_recipient">%s finns inte i din vårdtagarlista</string>
    <string name="fmt_unknown_recipient">%s hittades inte bland vårdtagare</string>

    <!--  Home for caretaker  -->
    <string name="str_emergency_alert">LARMA</string>
    <string name="missing_alarm_permission">Kan inte sätta alarm. Sätt på notiser.</string>
    <string name="channel_meals_name">Måltider</string>
    <string name="channel_meals_desc">Notifikation om måltider</string>
    <string name="meal_marked_too_early">Måltiden måste ha passerat för att markera den</string>
    <string name="notif_eaten">Jag har ätit</string>
    <string name="notif_not_eaten">Jag har inte ätit än</string>
    
    <!-- Larm för vårdtagare -->
    <string name="alarm_time_until_active">Tid kvar tills larmet aktiveras: </string>
    <string name="alarm_is_active">Larmet har aktiverats</string>
    <string name="alarm_regret_go_back">Ångra och gå tillbaka</string>
    <string name="alarm_turn_off_go_back">Stäng av och gå tillbaka</string>
    <string name="database_down">Databasen är nere!</string>

</resources>