<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".home_caregiver"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:id="@+id/elderText"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
       />

    <Button
        android:id="@+id/patients_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patients"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"

       />

    <Button
        android:id="@+id/historylog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historylog"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"

        />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/logout_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_home"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"

        />


</LinearLayout>