<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/languageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageText"
        android:textSize="25sp"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/sweBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swedish"
        android:layout_marginTop="20dp"
         />

    <Button
        android:id="@+id/engBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
         />
</LinearLayout>