<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="30dp">

    <TextView
        android:text="@string/forgotPassword"
        android:textStyle="bold"
        android:textSize="100px"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_provide_email_to_restore_password"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginBottom="30dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone">
    </ProgressBar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordBtn"
        android:text="@string/forgotPassword"
        android:layout_marginTop="10dp">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp">
    </TextView>

</LinearLayout>