<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="30dp">

    <TextView
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="150px"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="gone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPin"
            android:hint="@string/PIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:visibility="gone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupLogin">

        <RadioButton
            android:id="@+id/radioButtonPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/PIN"
            android:textSize="17dp">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:id="@+id/radioButtonPassword"
            android:textSize="17dp">
        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="@string/forgotPassword"
        android:textSize="17dp"
        android:textStyle="italic"></TextView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone">
    </ProgressBar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_marginTop="20dp">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp">
    </TextView>

</LinearLayout>