<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notificationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notis"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/timeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"/>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>