<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1B1F"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MealActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/manage_recipient_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_dark"
            android:padding="0dp"
            android:text="@string/str_back"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:cornerRadius="4dp"/>

        <TextView
            android:id="@+id/text_recipient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/almost_black"
            android:text="?"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:cornerRadius="0dp"/>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/meal_recipient_description"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background = "@color/purple"-->
<!--        android:orientation="vertical">-->

<!--        <tag android:id="@+id/clicked_meal_plan"/>-->

<!--    </LinearLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        >
<!--        android:padding="12dp"-->
<!--        android:background="@color/purple_dark"-->

        <LinearLayout
            android:id="@+id/week_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <tag android:id="@+id/tag_add_meal_at_day" ></tag>
            <tag android:id="@+id/tag_mealIndex" ></tag>
            <tag android:id="@+id/tag_dayIndex" ></tag>
            <tag android:id="@+id/tag_deleteMeal" ></tag>
            <tag android:id="@+id/tag_replace_template_meal" ></tag>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        >
        <Button
            android:id="@+id/btn_recipient_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_dark"
            android:padding="0dp"
            android:text="@string/str_recipient_info"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:cornerRadius="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">
            >
            <!-- Temporary button for recipient home screen -->
            <Button
                android:id="@+id/btn_home_recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:padding="0dp"
                android:text="@string/str_recipient"
                android:textAlignment="center"
                android:alpha="0.04"
                android:textColor="#FFF"
                android:textSize="23sp"
                app:cornerRadius="2dp"/>
        </LinearLayout>
        <!-- SAVE BUTTON? stuff is currently auto-saved so maybe not needed? -->
    </LinearLayout>

</LinearLayout>